--- a/views/index.pug
+++ b/views/index.pug
@@ -27,20 +27,22 @@ body
   main
     .row
       .col.s12.m8.offset-m2.l6.offset-l3.xl4.offset-xl4
-        .row
-          .input-field.col.s10
-            input#item.autocomplete(type='text', name='item')
-            label(for='item') Your New ToDo Item
-          .input-field.col.s2
-            button(type='submit').btn-floating.pulse.right.blue
-              i.material-icons
-                | send
+        form(action='/', method='post')
+          .row
+            .input-field.col.s10
+              input#item.autocomplete(type='text', name='item')
+              label(for='item') Your New ToDo Item
+            .input-field.col.s2
+              button(type='submit').btn-floating.pulse.right.blue
+                i.material-icons
+                  |send
         if items.length
           table.flow-text.highlight.z-depth-5.hoverable
             tbody
               each item in items
                 tr
                   td
+                    form(action='/?_method=PATCH', method='post')
                       input(type='hidden', name='id', value=item.id)
                       button(type='submit').btn-flat.btn-large.transparent
                         i(class=item.isComplete?'red-text':'green-text').material-icons
@@ -50,6 +52,7 @@ body
                             |check_box
                   td(class=item.isComplete&&'completed grey-text text-lighten-1') #{item.title}
                   td
+                    form(action='/?_method=DELETE', method='post')
                       input(type='hidden', name='id', value=item.id)
                       button(type='submit').btn-flat.btn-large.transparent.pink-text
                         i.material-icons
